--- a/working-movie-app-easier.html
+++ b/working-movie-app-easier.html
@@ -50,11 +50,18 @@
           method: "GET"
         }).then(function(response) {
 
+          console.log(response);
+
           // Creates a div to hold the movie
+          $("#movies-view").append("<div id='newMovie'></div>");
           // Retrieves the Rating Data
           // Creates an element to have the rating displayed
+          $("newMovie").append("<div id='rating'></div>");
           // Displays the rating
+          $("#rating").text(JSON.stringify(response.Rated));
+          console.log(response.Rated);
           // Retrieves the release year
+
           // Creates an element to hold the release year
           // Displays the release year
           // Retrieves the plot
